--- a/css/styles.css
+++ b/css/styles.css
@@ -167,8 +167,12 @@
         }
 
 		.double-container {
-		border-radius: 15px;
-		border: 1px solid black;
-	}
+			border-radius: 15px;
+			border: 1px solid black;
+		}
+
+		.progress {
+			border: 1px solid black;
+		}
 
 
